# mglib

./: .gitignore  LICENSE  README.md  README.rst  changelog.md  setup.cfg  setup.py
.github/workflows/: python-app.yml
mglib/: endpoint.py  exceptions.py  mime.py  ocrmigrate.py  path.py  pdfinfo.py  pdftk.py  shortcuts.py  stapler.py  step.py  storage.py  tiff.py  utils.py
mglib/conf/: __init__.py  default_settings.py  settings.py
mglib/test/: __init__.py  utils.py
test/: run.py  test_endpoint.py  test_mime.py  test_path.py  test_pdfinfo.py  test_pdftk.py  test_settings.py  test_stapler.py  test_step.py  test_storage.py  utils.py
test/data/: text.tiff
