[metadata]
name = mglib
version = 1.3.7
description = Common code used across all Papermerge project utilities
long_description = file: README.rst
url = https://www.papermerge.com/
author = Eugen Ciur
author_email = eugen@papermerge.com
keywords= common, package, shared, papermerge, pdf, ocr, dms
license = Apache 2.0 License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
